# hyrda

./: .coveragerc  .dockerignore  .env.backup  .env.example  .env.sample  .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  .tool-versions  AGENTS.md  AGENT_ARCHITECTURE.md  AGENT_EXECUTION_MODES.md  API_TESTING_STRATEGY.md  ARCHITECTURE_AGENT_LOADING.md  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  CODE_QUALITY_IMPROVEMENT_PLAN.md  DEEP_RESEARCH_TRANSFER_GUIDE.md  Dockerfile.agent  EXTERNAL_API_ACCESS.md  IMPROVEMENTS.md  LANGFUSE_SETUP.md  LANGGRAPH_STUDIO.md  LANGSMITH_PROXY.md  LIBRECHAT_ADVANCED_INTEGRATION.md  LIBRECHAT_CUSTOMIZATION_GUIDE.md  LIBRECHAT_CUSTOM_BUILD.md  LIBRECHAT_DEPLOYMENT_SUMMARY.md  LIBRECHAT_INTEGRATION_PLAN.md  LICENSE  MEDDPICC_ARCHITECTURE_FINAL.md  MEDDPICC_PDF_PROGRESS_COMPLETE.md  MEDDPICC_URL_SUPPORT_COMPLETE.md  METRIC_AI_INTEGRATION_DOCS.md  Makefile  OBSERVABILITY.md  OBSERVABILITY_BACKENDS.md  PRECOMMIT.md  (+124 more)
agent-service/: Dockerfile  README.md  app.py  generate_langgraph_config.py  langgraph.json  pyproject.toml  start.sh  startup.sh
agent-service/agents/: __init__.py  base_agent.py  langgraph.json  meddic_agent.py  metadata.py  profile_agent.py  registry.py
agent-service/api/: __init__.py  agents.py  embedded_agents.py  embedded_agents.py.old  goal_bots.py
agent-service/clients/: __init__.py  agent_client.py
agent-service/config/: __init__.py  settings.py
agent-service/dependencies/: agent_auth.py  auth.py  service_account_auth.py
agent-service/models/: __init__.py  agent_usage.py  base.py  cache.py  file_processing.py  health.py  llm_interactions.py  metric_record.py  retrieval.py  security_base.py  service_responses.py  slack_events.py
agent-service/services/: agent_executor.py  agent_registry.py  agent_sync.py  base.py  citation_service.py  container.py  context_builder.py  external_agent_loader.py  factory.py  internal_deep_research.py  langfuse_service.py  llm_providers.py  llm_service.py  metrics_service.py  prompt_service.py  rag_service.py  retrieval_client.py  retrieval_service.py  search_clients.py  slack_service.py  system_agent_loader.py  title_injection_service.py  unified_agent_loader.py  user_service.py
agent-service/tests/: conftest.py  test_agent_auth.py  test_agent_client_discovery.py  test_agent_client_streaming.py  test_agent_endpoints_authorization.py  test_agent_executor.py  test_agent_processes.py  test_agent_registry_get_agent.py  test_agent_registry_unified.py  test_agent_sync_aliases.py  test_agent_sync_enabled.py  test_agents_api_auth.py  test_api_endpoints.py  test_api_goal_bots.py  test_citation_service.py  test_container.py  test_context_builder.py  test_conversation_cache.py  test_conversation_manager.py  test_executive_summary_streaming.py  test_external_agent_loader.py  test_goal_executor.py  test_help_agent.py  test_internal_deep_research.py  test_llm_service.py  test_meddic_agent_helpers.py  test_meddpicc_context_manager.py  test_metadata.py  test_profile_agent_helpers.py  test_profile_agent_supervisor.py  test_prometheus_metrics.py  test_prometheus_middleware.py  test_qdrant_store.py  test_rag_internal_search_tool.py  test_researcher_helpers.py  test_retrieval_service.py  test_search_clients.py  test_service_account_auth.py  test_services_agent_registry.py  test_skills.py  (+4 more)
agent-service/utils/: decorators.py  logging.py  validation.py
bot/: .dockerignore  Dockerfile  README.md  __init__.py  alembic.ini  app.py  health.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run_metric_sync.py  test_qdrant_init_manual.py  test_sec_on_demand.py
bot/agents/: __init__.py  base_agent.py  help_agent.py  meddic_agent.py  profile_agent.py  registry.py  router.py
bot/bot_types/: __init__.py
bot/config/: settings.py
bot/evals/: README.md  eval_citation_validation.py  eval_followup_intent.py  eval_meddpicc_clarification.py  eval_quality_judge.py  eval_quality_judge_v2.py  eval_source_selection.py
bot/handlers/: agent_processes.py  constants.py  event_handlers.py  message_handlers.py  prompt_manager.py
bot/health_ui/: .eslintrc.js  .eslintrc.json  .gitignore  README.md  index.html  package-lock.json  package.json  vitest.config.js
bot/migrations/: env.py
bot/models/: __init__.py  agent_metadata.py  agent_permission.py  api.py  cache.py  file_processing.py  health.py  librechat_usage.py  llm_interactions.py  metric_record.py  metrics.py  permission_group.py  retrieval.py  security_base.py  service_responses.py  slack_events.py  slack_usage.py  slack_user.py
bot/services/: agent_client.py  agent_registry.py  base.py  citation_service.py  container.py  context_builder.py  contextual_retrieval_service.py  conversation_cache.py  conversation_manager.py  document_processor.py  embedding_service.py  factory.py  formatting.py  hybrid_rag_service.py  hybrid_retrieval_service.py  internal_deep_research.py  langfuse_service.py  llm_providers.py  llm_service.py  mcp_client.py  meddpicc_context_manager.py  metrics_service.py  (+15 more)
control_plane/: .gitignore  Dockerfile  README.md  SSL_SETUP.md  alembic.ini  app.py  pyproject.toml  startup.sh
dashboard-service/: Dockerfile  README.md  app.py  health_aggregator.py  pyproject.toml
evals/: README.md  eval_results.json  evaluator_prompts.md  managed_evaluators.md  prompt_evaluator.py  pyproject.toml  run_evals.py  run_langfuse_evals.py  setup_langfuse_evals.py
ingest/: .env.example  .gitignore  README.md  google_drive_ingester.py  ingest_config.py  ingester.py  ingester_backup.py  main.py  pyproject.toml  requirements.txt
rag-service/: .dockerignore  Dockerfile  app.py  pyproject.toml  pytest.ini  rag_types.py  requirements.txt
tasks/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  FASTAPI_MIGRATION.md  FASTAPI_MIGRATION_STATUS.md  Makefile  README.md  TESTING_SUMMARY.md  alembic.ini  alembic_data.ini  alembic_security.ini  app.py  app_fastapi.py  app_flask_backup.py  check_sec_data_integrity.py  nginx.conf  pyproject.toml  run_metric_sync.py  start.sh  supervisord.conf  test_vector_upsert.py
(+1779 files in other folders)
