[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "control-plane"
version = "1.0.0"
description = "InsightMesh Control Plane - Agent and Permission Management"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "gunicorn>=21.2.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "cryptography>=41.0.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "slack-sdk>=3.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "models*", "services*"]
exclude = [
    "ui*",
    "node_modules*",
    "dist*",
    "build*",
    "tests*",
    "logs*",
    "venv*",
    "*.egg-info*",
]
