[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "control-plane"
version = "1.0.0"
description = "InsightMesh Control Plane - Agent and Permission Management"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",  # For async HTTP calls
    "itsdangerous>=2.1.0",  # For sessions
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "cryptography>=41.0.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "slack-sdk>=3.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "PyJWT>=2.8.0",  # JWT token generation and validation
    "redis>=5.0.0",  # Redis for session storage and token revocation
    "prometheus-client>=0.20.0",  # Prometheus metrics
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # Allow imports after sys.path modifications in tests

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "models*", "services*"]
exclude = [
    "ui*",
    "node_modules*",
    "dist*",
    "build*",
    "tests*",
    "logs*",
    "venv*",
    "*.egg-info*",
]
